--- a/index.html
+++ b/index.html
@@ -732,26 +732,39 @@ function showTempoResponseScreen(correctAnswer, callback, videoFile, trialNumber
       };
 
       saveResponse(entry)
-        .then(() => {
-            if (userChoice === correctAnswer) {
-            feedbackEl.style.color = successColor;
-            feedbackEl.innerText = "Correct!";
-            correctSound.play().catch(() => {});
-            setTimeout(callback, 1500);
-          } else {
-            feedbackEl.style.color = errorColor;
-            feedbackEl.innerText = "Oops! Let's try that one again.";
-            wrongSound.play().catch(() => {});
-            setTimeout(() => {
-              playTempoPracticeVideo(
-                videoFile,
-                correctAnswer,
-                callback,
-                trialNumber
-              );
-            }, 4000);
-          }
-        })
+.then(() => {
+  let feedbackText = "";
+  let feedbackAudioSrc = "";
+  if (userChoice === correctAnswer) {
+    if (correctAnswer === "same") {
+      feedbackText = "Correct! It was the same! That means Melody must have been in a normal elevator this time and not a magical one.";
+      feedbackAudioSrc = "feedback_normal.mp3";
+    } else {
+      feedbackText = "Correct! That means Melody must have been in a magical elevator!";
+      feedbackAudioSrc = "feedback_magical.mp3";
+    }
+    feedbackEl.style.color = successColor;
+    feedbackEl.innerText = feedbackText;
+    const feedbackAudio = new Audio(feedbackAudioSrc);
+    AudioEngine.attach(feedbackAudio);
+    feedbackAudio.play().catch(() => {});
+    feedbackAudio.onended = () => setTimeout(callback, 1000);
+  } else {
+    feedbackEl.style.color = errorColor;
+    feedbackEl.innerText = "Oops! Let's try that one again.";
+    wrongSound.play().catch(() => {});
+    wrongSound.onended = () => {
+      setTimeout(() => {
+        playTempoPracticeVideo(
+          videoFile,
+          correctAnswer,
+          callback,
+          trialNumber
+        );
+      }, 500);
+    };
+  }
+})
       .catch(() => {
           feedbackEl.style.color = errorColor;
           feedbackEl.innerText = "We couldn't save your answer. Please try again.";
@@ -984,21 +997,34 @@ function showPitchResponseScreen(correctAnswer, callback, videoFile, trialNumber
       };
 
       saveResponse(entry)
-        .then(() => {
-          if (choice === correctAnswer) {
-            feedbackEl.style.color = successColor;
-            feedbackEl.innerText = "Correct!";
-            correctSound.play().catch(() => {});
-            setTimeout(callback, 1500);
-          } else {
-            feedbackEl.style.color = errorColor;
-            feedbackEl.innerText = "Oops! Let's try that one again.";
-            wrongSound.play().catch(() => {});
-            setTimeout(() => {
-              playPitchPracticeVideo(videoFile, correctAnswer, callback, trialNumber);
-            }, 4000);
-          }
-        })
+.then(() => {
+  let feedbackText = "";
+  let feedbackAudioSrc = "";
+  if (choice === correctAnswer) {
+    if (correctAnswer === "same") {
+      feedbackText = "Correct! It was the same! That means Melody must have been in a normal elevator this time and not a magical one.";
+      feedbackAudioSrc = "feedback_normal.mp3";
+    } else {
+      feedbackText = "Correct! That means Melody must have been in a magical elevator!";
+      feedbackAudioSrc = "feedback_magical.mp3";
+    }
+    feedbackEl.style.color = successColor;
+    feedbackEl.innerText = feedbackText;
+    const feedbackAudio = new Audio(feedbackAudioSrc);
+    AudioEngine.attach(feedbackAudio);
+    feedbackAudio.play().catch(() => {});
+    feedbackAudio.onended = () => setTimeout(callback, 1000);
+  } else {
+    feedbackEl.style.color = errorColor;
+    feedbackEl.innerText = "Oops! Let's try that one again.";
+    wrongSound.play().catch(() => {});
+    wrongSound.onended = () => {
+      setTimeout(() => {
+        playPitchPracticeVideo(videoFile, correctAnswer, callback, trialNumber);
+      }, 500);
+    };
+  }
+})
         .catch(() => {
           feedbackEl.style.color = errorColor;
           feedbackEl.innerText = "We couldn't save your answer. Please try again.";
@@ -1594,6 +1620,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
