--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ const AudioEngine = (() => {
     scope.querySelectorAll("audio, video").forEach(wire);
   }
 
-  async function start() {
+   function start() {
     if (!ctx) ctx = new (window.AudioContext || window.webkitAudioContext)();
     try { await ctx.resume(); } catch {}
     ensureCompressor();
@@ -376,9 +376,9 @@ function saveResponse(entry) {
   });
 }
 
-window.onload = async () => {
+window.onload =  () => {
   // Prime WebAudio on first gesture (click/touch/key)
-  const prime = async () => {
+  const prime =  () => {
     await AudioEngine.start();
     AudioEngine.attachAll(document);               // wire everything now that ctx is allowed
 
@@ -415,6 +415,14 @@ function updateScreen(html, background=null){
   AudioEngine.attachAll(s); // before gesture this queues; after gesture it wires immediately
 }
 
+function shuffleArray(array) {
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+}
+
 async function loadCSVData(blockType) {
   const response = await fetch(BLOCK_FILES[blockType]);
   if (!response.ok) {
@@ -422,10 +430,10 @@ async function loadCSVData(blockType) {
   }
   const text = await response.text();
   const lines = text.trim().split('\n').slice(1);
-  const parsed = lines.map(line => line.split(','));
+  const parsed = shuffleArray(lines.map(line => line.split(',')));
   blocks[blockType] = parsed;
 }
-
+  
 function showIntroScreen() {
   updateScreen(`
     <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;box-sizing:border-box;">
@@ -1114,7 +1122,7 @@ function showRealTrialsIntro() {
   startBtn.addEventListener("click", startRealTrials);
 }
 
-async function startRealTrials() {
+ function startRealTrials() {
   const block = BLOCK_ORDER[currentBlockIndex]; // <-- don't override here
 
   try {
@@ -1156,7 +1164,7 @@ function showAutoplayOverlay(audio, callback) {
     .getElementById("resumeAudio")
     .addEventListener(
       "click",
-      async () => {
+       () => {
         overlay.style.display = "none";
         try {
           await audio.play();
@@ -1185,7 +1193,7 @@ function hideAll() {
   });
 }
   
-async function playTrial() {
+ function playTrial() {
   console.log('playTrial called');
   document.getElementById("trialControls").innerHTML = "";
   updateScreen("");
@@ -1508,7 +1516,7 @@ function showParty({ onDone, autoStart = false } = {}) {
   const sprites = [];
   const transientSprites = [];
 
-  async function runPartySequence() {
+   function runPartySequence() {
     if (!startBtn || startBtn.disabled) return;
 
     startBtn.disabled = true;
@@ -1619,6 +1627,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
