--- a/index.html
+++ b/index.html
@@ -420,10 +420,21 @@ async function loadCSVData(blockType) {
   if (!response.ok) {
     throw new Error(`HTTP ${response.status}`);
   }
+
   const text = await response.text();
-  const lines = text.trim().split('\n').slice(1);
-  const parsed = lines.map(line => line.split(','));
-  blocks[blockType] = parsed;
+  const rows = text
+    .split(/\r?\n/)
+    .slice(1)
+    .map(line => line.trim())
+    .filter(Boolean)
+    .map(line => line.split(',').map(cell => cell.trim()));
+
+  blocks[blockType] = rows.map(([filename, original, gap, test]) => ({
+    filename,
+    original: parseFloat(original),
+    gap: parseFloat(gap),
+    test: parseFloat(test)
+  }));
 }
 
 function showIntroScreen() {
@@ -1199,10 +1210,7 @@ async function playTrial() {
     return;
   }
 
-  const [filename, original, gap, test] = trial;
-  const originalSec = parseFloat(original);
-  const gapSec = parseFloat(gap);
-  const testSec = parseFloat(test);
+  const { filename, original: originalSec, gap: gapSec, test: testSec } = trial;
 
    const audio = document.getElementById("myAudio");
   audio.src = filename;
@@ -1619,6 +1627,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
