--- a/index.html
+++ b/index.html
@@ -731,7 +731,6 @@ function showTempoResponseScreen(correctAnswer, callback, videoFile, trialNumber
         trial_phase: "practice"
       };
 
-      //CHANGED 
       saveResponse(entry)
         .then(() => {
             if (userChoice === correctAnswer) {
@@ -984,7 +983,6 @@ function showPitchResponseScreen(correctAnswer, callback, videoFile, trialNumber
         trial_phase: "practice"
       };
 
-      //CHANGED
       saveResponse(entry)
         .then(() => {
           if (choice === correctAnswer) {
@@ -1147,11 +1145,11 @@ function showAutoplayOverlay(audio, callback) {
 }
 
 function updatePlayButton() {
+  const block = BLOCK_ORDER[currentBlockIndex];
   const trialControls = document.getElementById("trialControls");
-  trialControls.innerHTML = `<button id="playButton" class="btn-primary">Click here to Start!</button>`;
+  trialControls.innerHTML = `<button id="playButton" class="btn-primary">Start ${block.toUpperCase()} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>`;
   document.getElementById("playButton").addEventListener("click", playTrial);
 }
-  
 function hideAll() {
   visuals.forEach(v => {
     v.el.style.display = "none";
@@ -1269,11 +1267,10 @@ try {
     overlay.innerHTML += '<div style="color:red;font-size:1.5em;margin-top:20px;">Audio playback was blocked. Please click the button above to start the trial.</div>';
   }
 }
-
+  
 function showResponseOptions() {
   updateScreen(`
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px; background: white;">
-      <audio id="elevatorQuestionAudio" src="elevator_question.mp3"></audio>
       <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
       <p style="max-width:600px;font-size:1.1em;margin-bottom:30px;">
         Now that the music is over, think back to how it sounded before and after the pause.<br><br>
@@ -1291,17 +1288,9 @@ function showResponseOptions() {
         </div>
       </div>
     </div>`);
-
-  // Play the narration automatically
-  const narration = document.getElementById("elevatorQuestionAudio");
-  if (narration) {
-    narration.play().catch(() => {});
-  }
-
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
   document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
 }
-
 function handleResponse(choice) {
   if (responseSubmitted) return;
   responseSubmitted = true;
