--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ const BLOCK_ORDER=["tempo","pitch"];
 const BLOCK_FILES = { tempo: "tempo_trials.csv", pitch: "pitch_trials.csv" };
 const TOTAL_TRIALS = TRIALS_PER_BLOCK * BLOCK_ORDER.length;
 const ANIMALS_PER_BLOCK = 3;
-const ANIMAL_INTERVAL = Math.ceil(TRIALS_PER_BLOCK / ANIMALS_PER_BLOCK);
+const ANIMAL_INTERVAL = 4; 
 const ANIMALS = [
   {name:"Tiger", image:"tiger.png", sound:"tiger.mp3", action:"Paws up! Roar like a tiger 3 times!"},
   {name:"Lion", image:"lion.png", sound:"lion.mp3", action:"Stand tall like a lion. Reach up high and hold a big stretch for 5 seconds."},
@@ -1313,9 +1313,17 @@ function showResponseOptions() {
         </div>
       </div>
     </div>`);
+  // Play the narration automatically
+  const narration = document.getElementById("elevatorQuestionAudio");
+  if (narration) {
+    narration.play().catch(() => {});
+  }
+  
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
   document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
 }
+
+  
 function handleResponse(choice) {
   if (responseSubmitted) return;
   responseSubmitted = true;
@@ -1610,6 +1618,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
