--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ const TRIALS_PER_BLOCK= 16;
 const BLOCK_ORDER=["tempo","pitch"];
 const BLOCK_FILES = { tempo: "tempo_trials.csv", pitch: "pitch_trials.csv" };
 const TOTAL_TRIALS = TRIALS_PER_BLOCK * BLOCK_ORDER.length;
-const ANIMALS_PER_BLOCK = 3;
-const ANIMAL_INTERVAL = 4; 
+const ANIMALS_PER_BLOCK = 2;
+const ANIMAL_INTERVAL = Math.ceil(TRIALS_PER_BLOCK / ANIMALS_PER_BLOCK);
 const ANIMALS = [
   {name:"Tiger", image:"tiger.png", sound:"tiger.mp3", action:"Paws up! Roar like a tiger 3 times!"},
   {name:"Lion", image:"lion.png", sound:"lion.mp3", action:"Stand tall like a lion. Reach up high and hold a big stretch for 5 seconds."},
@@ -1296,6 +1296,7 @@ try {
 function showResponseOptions() {
   updateScreen(`
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px; background: white;">
+      <audio id="elevatorQuestionAudio" src="elevator_question.mp3"></audio>
       <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
       <p style="max-width:600px;font-size:1.1em;margin-bottom:30px;">
         Now that the music is over, think back to how it sounded before and after the pause.<br><br>
@@ -1305,14 +1306,15 @@ function showResponseOptions() {
       <div style="display:flex;justify-content:center;gap:80px;">
         <div style="text-align:center;">
           <img src="normal.jpg" class="elevator-option" id="normalElevator" alt="Normal Elevator" style="width:300px;">
-          <div style="margin-top:12px;font-weight:bold;">Normal Elevator</div>
+          <div style="margin-top:px;font-weight:bold;">Normal Elevator</div>
         </div>
         <div style="text-align:center;">
           <img src="magical.png" class="elevator-option" id="magicalElevator" alt="Magical Elevator" style="width:300px;">
-          <div style="margin-top:12px;font-weight:bold;">Magical Elevator</div>
+          <div style="margin-top:px;font-weight:bold;">Magical Elevator</div>
         </div>
       </div>
     </div>`);
+
   // Play the narration automatically
   const narration = document.getElementById("elevatorQuestionAudio");
   if (narration) {
@@ -1618,6 +1620,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
