--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@ const BLOCK_ORDER=["tempo","pitch"];
 const BLOCK_FILES = { tempo: "tempo_trials.csv", pitch: "pitch_trials.csv" };
 const TOTAL_TRIALS = TRIALS_PER_BLOCK * BLOCK_ORDER.length;
 const ANIMALS_PER_BLOCK = 2;
-const ANIMAL_INTERVAL = Math.ceil(TRIALS_PER_BLOCK / ANIMALS_PER_BLOCK);
 const ANIMALS = [
   {name:"Tiger", image:"tiger.png", sound:"tiger.mp3", action:"Paws up! Roar like a tiger 3 times!"},
   {name:"Lion", image:"lion.png", sound:"lion.mp3", action:"Stand tall like a lion. Reach up high and hold a big stretch for 5 seconds."},
@@ -243,6 +242,8 @@ const ANIMALS = [
   {name:"Elephant", image:"elephant.png", sound:"elephant.mp3", action:"One arm is your trunk. Swing it side-to-side and stomp 5 slow steps."},
   {name:"Parrot", image:"parrot.png", sound:"parrot.mp3", action:"Stand tall, flap 8 times, then give one big squawk — ‘SQUAWK!’"}
 ];
+
+const ANIMAL_INTERVAL = Math.ceil(TRIALS_PER_BLOCK / ANIMALS_PER_BLOCK);
 
 const BACKENDLESS_URL = "https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses";
 
@@ -373,6 +374,11 @@ function saveResponse(entry) {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(entry)
+  }).then(response => {
+    if (!response.ok) {
+      throw new Error(`HTTP ${response.status}`);
+    }
+    return response;
   });
 }
 
@@ -1382,9 +1388,17 @@ const entry = {
       proceed();
     }
   })
-  .catch(() => {
-    alert("Failed to record response.");
+  .catch((err) => {
+    console.error("Failed to record response", err);
+    alert("Failed to record response. Please try again.");
     responseSubmitted = false;
+    imgs.forEach(img => img.style.pointerEvents = 'auto');
+    const normal = document.getElementById("normalElevator");
+    const magical = document.getElementById("magicalElevator");
+    if (normal && magical) {
+      normal.addEventListener("click", () => handleResponse("normal"), { once: true });
+      magical.addEventListener("click", () => handleResponse("magical"), { once: true });
+    }
   });
 }
 
@@ -1620,6 +1634,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
