--- a/index.html
+++ b/index.html
@@ -1217,19 +1217,20 @@ async function playTrial() {
   
   const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
 
-  // Wait for all videos to have metadata loaded
-  await Promise.all([
-    new Promise(res => { if (v1.readyState >= 1) res(); else v1.onloadedmetadata = res; }),
-    new Promise(res => { if (vGap.readyState >= 1) res(); else vGap.onloadedmetadata = res; }),
-    new Promise(res => { if (v2.readyState >= 1) res(); else v2.onloadedmetadata = res; })
-  ]);
+// Wait for metadata so .duration is valid
+await Promise.all([
+  new Promise(res => { if (v1.readyState >= 1) res(); else v1.onloadedmetadata = res; }),
+  new Promise(res => { if (vGap.readyState >= 1) res(); else vGap.onloadedmetadata = res; }),
+  new Promise(res => { if (v2.readyState >= 1) res(); else v2.onloadedmetadata = res; })
+]);
 
-  // Prime videos
-  await Promise.all([
-    v1.play().then(() => v1.pause()),
-    vGap.play().then(() => vGap.pause()),
-    v2.play().then(() => v2.pause())
-  ]);
+// Optional lightweight “prime”; keep muted and ignore failures
+[v1, vGap, v2].forEach(v => v.muted = true);
+await Promise.all([
+  v1.play().then(() => v1.pause()).catch(() => {}),
+  vGap.play().then(() => vGap.pause()).catch(() => {}),
+  v2.play().then(() => v2.pause()).catch(() => {})
+]);
 
   const video1Sec = v1.duration;
   const gapVideoSec = vGap.duration;
@@ -1634,6 +1635,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
